...
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/sort_text">

                <Spinner
                    android:id="@+id/sort_dropdown_spinner"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:spinnerMode="dropdown" />

                <Button
                    android:id="@+id/asc_desc_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="?colorPrimary"
                    android:text="@string/ascending" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="24dp"
                android:text="Filter by Description"
                android:textColor="?colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/description_filter_edit_text"
                app:layout_constraintEnd_toStartOf="@+id/desc_line_2"
                app:layout_constraintStart_toEndOf="@+id/desc_line_1"
                app:layout_constraintTop_toBottomOf="@+id/add_date_filter_button" />

            <View
                android:id="@+id/desc_line_2"
...
                android:layout_marginTop="10dp"
                android:autofillHints="@string/description_keywords_autofill"
                android:hint="Enter description filter here"
                app:layout_constraintTop_toBottomOf="@+id/desc_text" />

            <Button
                android:id="@+id/add_description_filter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="?colorSecondary"
                android:text="@string/description_filter_button_text"
                app:layout_constraintEnd_toEndOf="parent"
...
