...
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/color_secondary_draw"
        android:orientation="horizontal">

        <ImageButton style="@style/taskbar_button"
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/back_button_label"
            android:src="@drawable/icon_back" />

...
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:orientation="horizontal"/>

        <ImageButton style="@style/taskbar_button"
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/save_button_label"
            android:src="@drawable/icon_save"/>

...
